k8s/manifests/nginx/endpoint.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: service-nginx
subsets:
  - addresses:
      - ip: 192.168.56.120
    ports:
      - name: port-nginx
        port: 80
        protocol: TCP
