k8s/manifests/nginx/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  selector:
    app: pod-nginx
  ports:
    - name: port-nginx
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
