k8s/manifests/nginx/ingress-app.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/server-snippet: |
    #   location /admin {
    #     deny all;
    #   }
spec:
  rules:
    - host: service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nginx
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: forbidden
                port:
                  number: 80
